# threshold

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  build_and_run.sh  conf.sh  dev.sh
src/: main.cpp
src/common/: camera.cpp  camera.h  config.h  gamedata.h  mesh.cpp  mesh.h  object.cpp  object.h  shader.cpp  shader.h  stlloader.cpp  stlloader.h  util.cpp  util.h
src/game/: export.cpp  libgame.exports
src/main/: main.cpp
src/shaders/: shader1.frag  shader1.vert
src/stls/: cube.stl  donut.stl  suzanne.stl  suzanne_with_hole.stl  wow.stl
